@@ -3,18 +3,19 @@ Rails::Application.routes.draw do
     get :expire, :on => :member
   end
 
+  resources :admins, :only => [:index]
+
   devise_for :users
-  devise_for :admin, :as => 'admin_area'
-  devise_for :accounts, :scope => 'manager', :path_prefix => ':locale',
+  devise_for :admin, :as => "admin_area", :controllers => { :sessions => "sessions" }
+  devise_for :accounts, :scope => "manager", :path_prefix => ":locale",
     :class_name => "User", :path_names => {
-      :sign_in => 'login', :sign_out => 'logout',
-      :password => 'secret', :confirmation => 'verification',
-      :unlock => 'unblock', :sign_up => 'register'
+      :sign_in => "login", :sign_out => "logout",
+      :password => "secret", :confirmation => "verification",
+      :unlock => "unblock", :sign_up => "register"
     }
 
-  resources :admins, :only => [:index]
-  root :to => "home#index"
+  match "/admin_area/home", :to => "admins#index", :as => :admin_root
+  match "/sign_in", :to => "devise/sessions#new"
 
-  match '/admin_area/home', :to => "admins#index", :as => :admin_root
-  match '/sign_in', :to => "devise/sessions#new"
+  root :to => "home#index"
 end
